--- a/master.css
+++ b/master.css
@@ -1,19 +1,150 @@
-* {
+*{
   margin: 0;
   padding: 0;
 }
 
-header {
-  height: 400px;
+.generale{
+  background-color: black;
+  width: 100%;
+}
+
+header{
+  height: 500px;
   width: 100%;
   background-color: lightgrey;
 }
-.generale {
-  background-color: black;
+
+.navtop{
   width: 100%;
-  height: 600px;
+  height: 80px;
+  background-color: #0D325A;
 }
 
+.navtop::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.navsx {
+  display: inline-block;
+  width: 75%;
+  float: left;
+}
+
+.logo{
+  float: left;
+  margin: 5px 5%;
+}
+
+ul {
+  width: 100%;
+}
+
+ul::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+li{
+  float: left;
+  list-style-type: none;
+  height: 60px;
+  padding-left: 1%;
+}
+
+.navmenu{
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 8pt;
+}
+
+li a {
+  display: inline-block;
+  line-height: 60px;
+
+}
+li a:hover {
+  color: orange;
+}
+
+.navdx {
+  display: inline-block;
+  float: right;
+  width: 25%;
+}
+
+.navdx::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.login {
+  border: 1px solid #4783AC;
+  border-radius: 10%;
+  padding: 5px;
+  background-color: #0D325A;
+  color: white;
+  margin: 25px 4%;
+}
+
+.login:hover {
+  cursor: pointer;
+}
+
+.struttura {
+  border: 1px solid green;
+  border-radius: 10%;
+  background-color: green;
+  padding: 4px;
+}
+
+.navbottom {
+  height: 420px;
+  width: 100%;
+  background-color: #0D325A;
+}
+
+.navbottom::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.text {
+  width: 50%;
+  float: left;
+  height: 420px;
+  position: relative;
+}
+
+.image {
+  width: 50%;
+  height: 420px;
+  float: right;
+  position: relative;
+}
+
+#textheader {
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-25% -50%);
+  color: white;
+  font-size: 20pt;
+}
+
+.bottom {
+  font-size: 20pt;
+}
+
+.uomini {
+  height: 420px;
+  width: 100%;
+}
 /* definizione blocco a 3 colonne */
 
 .threerow {
