--- a/master.css
+++ b/master.css
@@ -4,7 +4,6 @@
 }
 
 .generale{
-  background-color: black;
   width: 100%;
 }
 
@@ -147,10 +146,6 @@ li a:hover {
 }
 /* definizione blocco a 3 colonne */
 
-.threerow {
-  background-color: lime;
-}
-
 .threerow::after {
   content: "";
   display: table;
@@ -160,15 +155,32 @@ li a:hover {
 .bloccotitle {
   width: 100%;
   height: 100px;
-  background-color: red;
+  background-color: #F9F9F9;
+}
+
+.titolo3colonne {
+  text-align: center;
+  font-size: 20pt;
+  font-family: arial;
+  padding-top: 25px;
+}
+
+.text3colonne{
+  text-align: center;
+  font-size: 16pt;
+  color: grey;
 }
 
 .colonna {
   float: left;
   width: 25%;
-  height: 100px;
   background-color: white;
   margin: 2%;
+}
+
+.loghi {
+  position: relative;
+  left: 25%;
 }
 
 /* definizione blocco a due colonne */
